--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "env_booking",
   "private": true,
   "dependencies": {
+    "jstimezonedetect": "^1.0.6",
     "timepicker": "^1.11.12"
   }
 }
